# MultimediaTools

./: .gitignore  .gitmodules  CRASH_FIX_SUMMARY.md  CRITICAL_FIX_ANALYSIS.md  FINAL_THREAD_SAFETY_FIX.md  LICENSE  MINIMAL_CRASH_FIX.md  MPlayer_Integration_README.md  MultiMediaTool.sln  README.md  README_SERVER_INTEGRATION.md  REGISTRATION_FIX_GUIDE.md  THREAD_SAFETY_FIX.md  UpgradeLog.htm  UpgradeLog4.htm  VIDEO_EFFECTS_THREAD_SAFETY_FIX.md  WordToPdf_INTEGRATION_SUMMARY.md  configure.sh  encoding_fix_test.cpp  generate_version.sh  pack.iss  requirements_simple.txt  test_ai_integration.cpp  test_converter.py  test_integration.bat  version_template.h  word_converter.py  word_converter_ctypes.py
MultiMediaTool/: MultiMediaTool.pro  MultiMediaTool.qrc  MultiMediaTool.vcxproj  MultiMediaTool.vcxproj.filters  icon.qrc  main.cpp
MultiMediaTool/src/: main.cpp  version.h
MultiMediaTool/src/base/: cmdexecutor.cpp  cmdexecutor.h  dragdrophandler.cpp  dragdrophandler.h  ipcmgrbase.cpp  ipcmgrbase.h  mplayermanager.cpp  mplayermanager.h  pagebase.cpp  pagebase.h  timedcmdexecutor.cpp  timedcmdexecutor.h
MultiMediaTool/src/core/: ApiManager.cpp  ApiManager.h
MultiMediaTool/src/gui/: MainWindow.h  application.cpp  application.h  basewindow.cpp  basewindow.h  menu.cpp  menu.h  mytitlebar.cpp  mytitlebar.h
MultiMediaTool/src/utils/: encodinghelper.cpp  (+5 more)
MultiMediaToolServer/: CMakeLists.txt  MultiMediaToolServer.vcxproj  main.cpp  server.sql
MultiMediatoolTest/: MultiMediatoolTest.vcxproj  test.cpp  test_output.flv  test_python_link.cpp
OpenCVTools/: AvWorker.cpp  AvWorker.h  COpenCVTools.cpp  COpenCVTools.h  CvTranslator.cpp  CvTranslator.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  LogStreamBuf.cpp  LogStreamBuf.h  OpenCVFFMpegTools.cpp  OpenCVFFMpegTools.h  OpenCVTools.vcxproj  OpenCVTools.vcxproj.filters  cpp.hint  deviceInfo.cpp  deviceInfo.h  mdevice.h  pch.h  videoTrans.cpp  videoTrans.h
VideoCapture/: IRecordStrategy.cpp  IRecordStrategy.h  VideoCapture.cpp  VideoCapture.h  VideoCapture.vcxproj  VideoCapture.vcxproj.filters  cpp.hint  pch.h
WordToPdf/: FINAL_SOLUTION.md  README.md  README_NATIVE.md  WORDTOPDF_FINAL_GUIDE.md  WordToPdf.cpp  WordToPdf.h  WordToPdf.py  WordToPdf.pyproj  WordToPdf.spec  WordToPdf.vcxproj  WordToPdf.vcxproj.filters  WordToPdfNative.cpp  WordToPdfNative.h  WordToPdfNative.vcxproj  WordToPdfNative.vcxproj.filters  WordToPdfNativeTest.cpp  build_dll.py  build_simple.py  build_working.py  configure.sh  converter_cli.py  converter_cli.spec  converter_wrapper.c  converter_wrapper.h  converter_wrapper.pyx  converter_wrapper_simple.c  converter_wrapper_simple.h  converter_wrapper_simple.pyx  cpp.hint  dllmain.cpp  framework.h  install_and_build.py  pch.cpp  pch.h  qt_example.cpp  requirements.txt  setup.py  simple_test.py  test_converter.py  universal_converter.py  (+1 more)
WordToPdf/release/: qt_converter.h  requirements.txt  universal_converter.py
WordToPdf/test_files/: test.csv  test.docx  test.html  test_from_csv.html
WordTool/: WordTool.vcxproj
build-MultiMediaTool-Desktop_Qt_5_12_11_MSVC2017_64bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_conacat.h  ui_concat.h  ui_easyoilpainting.h  ui_effact.h  ui_ffmpegcmd.h  ui_glass.h  ui_grey.h  ui_mVersion.h  ui_mosaic.h  ui_oilpainting.h  ui_picture.h  ui_reverse.h  ui_smooth.h  ui_version.h  ui_videopage.h  ui_watertext.h  ui_white1.h  ui_white2.h  ui_word.h
build-MultiMediaTool-Desktop_Qt_5_12_11_MSVC2017_64bit-Release/release/: moc_ApiManager.cpp  moc_application.cpp  moc_basewindow.cpp  moc_cmdexecutor.cpp  moc_conacat.cpp  moc_concat.cpp  moc_dragdrophandler.cpp  moc_easyoilpainting.cpp  moc_effact.cpp  moc_ffmpegclientwidget.cpp  moc_ffmpegcmd.cpp  moc_glass.cpp  moc_grey.cpp  moc_ipcmgrbase.cpp  moc_mVersion.cpp  moc_menu.cpp  moc_mosaic.cpp  moc_myipcmgr.cpp  moc_mytitlebar.cpp  moc_oilpainting.cpp  moc_pageBase.cpp  moc_picture.cpp  moc_predefs.h  moc_reverse.cpp  moc_smooth.cpp  moc_timedcmdexecutor.cpp  moc_version.cpp  moc_videopage.cpp  moc_watertext.cpp  moc_white1.cpp  moc_white2.cpp  moc_word.cpp  qrc_icon.cpp
build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/debug/: moc_myipcmgr.cpp  moc_player.cpp  moc_predefs.h
build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release
build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Release/release/: moc_ipcmgrbase.cpp  moc_mglwidget.cpp  moc_mplayer.cpp  moc_player.cpp  moc_predefs.h
build-myPlayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-myPlayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/debug/: moc_mainwindow.cpp
curlAli/: DashScopeChat.cpp  DashScopeChat.h  cpp.hint  curlAli.cpp  curlAli.h  curlAli.vcxproj  curlAli.vcxproj.filters
formatChange/: AVPROCESSOR_USAGE.md  AVProcessor.cpp  AVProcessor.h  cpp.hint  formatChange.cpp  formatChange.h  formatChange.vcxproj  formatChange.vcxproj.filters  framework.h  pch.h
mediaServer/: CMakeCache.txt  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  HttpServer.cpp  HttpServer.h  README_BUILD.md  SimpleHttpServer.h  check_charset.sql  compatible_fix.sql  complete_fix.sql  config.h.in  create_database_simple.sql  create_login_test.sql  create_test_user.sql  debug_auth.sql  debug_current.sql  final_fix.sql  fix_encoding.sql  fixed_schema.sql  install_deps.sh  login_test.sql  main.cpp  minimal_fix.sql  mysql_schema - 副本.sql  mysql_schema.sql  quick_fix.sql  quick_test.cpp  register_fix.sql  salt_fix.sql  simple_login_patch.sql  simple_test.sql  test_registration.sql  test_registration_fix.sql
mediaServer/crypto/: CryptoUtils.cpp  CryptoUtils.h
mplayer/: .qmake.stash  mplayer.pro  mplayer.vcxproj  mplayer.vcxproj.filters
mplayer/src/: ffmpeg_util.h  ipcmgrbase.cpp  ipcmgrbase.h  lan_util.h  main.cpp  mdevice.cpp  mdevice.h  mframe.h  mglwidget.cpp  mglwidget.h  mplayer.cpp  mplayer.h  myipcmgr.cpp  myipcmgr.h  player.cpp  player.h
(+90 files in other folders)
